fix(*): fix table row height too large with contents

--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -106,6 +106,8 @@
   display: flex;
   align-items: center;
   flex-flow: row wrap;
+  padding: 8px 11px !important;
+  min-height: 44px;
 }
 
 .labelNonPublic {
